<resources>
    <string name="app_name">TuttiAPPosto</string>

<!--    Buttons-->
    <string name="request_new_location">New</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="bookings">Tue prenotazioni</string>
    <string name="logout">Logout</string>
    <string name="options">Opzioni</string>

<!--    Common-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">Errore nel campo email</string>
    <string name="password_error">Errore nel campo password.</string>
    <string name="mandatory_error">Campo obbligatorio.</string>
    <string name="save">Salva</string>
    <string name="back">Indietro</string>
    <string name="select_one_value">Seleziona un valore</string>
    <string name="select_all_values">Tutti i valori</string>
    <string name="company">Ente di navigazione</string>
    <string name="building">Struttura</string>
    <string name="room">Locale</string>
    <string name="network_not_connected">Per favore collegare il dispositivo alla rete internet</string>
    <string name="action_book">Prenota</string>
    <string name="action_delete">Cancella</string>
    <string name="action_edit">Modifica</string>
    <string name="action_edit_success">Modifica avvenuta con successo</string>
    <string name="action_edit_error">Modifica non avvenuta</string>
    <string name="action_delete_success">Cancellazione avvenuta con successo</string>
    <string name="action_delete_error">Cancellazione non avvenuta</string>
    <string name="action_report">Segnala</string>
    <string name="no_data_available">NESSUN ELEMENTO DISPONIBILE</string>
    <string name="today">Oggi</string>

    <!--    Login-->
    <string name="login">Login</string>
    <string name="login_welcome_text">Benvenuti in TuttiAPPosto</string>
    <string name="login_error">Errore nel login.</string>
    <string name="login_success">Login effettuato con successo.</string>
    <string name="login_register_message">Clicca qui per la registrazione</string>

<!--    Registration-->
    <string name="registration">Registrati</string>
    <string name="registration_welcome_text">Effettua la tua registrazione</string>
    <string name="registration_error">Errore nella registrazione.</string>
    <string name="registration_login_message">Clicca qui per tornare al login</string>

<!--    Logout-->
    <string name="logout_success">Logout effettuato con successo.</string>
    <string name="logout_error">Errore nel logout.</string>

<!--    Home-->
    <string name="home_no_config_welcome_text">Per iniziare ad utilizzare il servizio, devi effettuare la prima configurazione.</string>
    <string name="home_first_config">Prima configurazione</string>
    <string name="book_new_table">Prenota</string>

<!--    Availabilities-->
    <string name="a_lot_of_tables">posti</string>
    <string name="only_tables">solo</string>
    <string name="last_table">ultimo!</string>

<!--    Opzioni-->
    <string name="options_welcome_text">Opzioni dell\'applicazione</string>
    <string name="filter">Filtra</string>
    <string name="search">Cerca</string>
    <string name="searchingDate">Data</string>
    <string name="interval">Durata</string>
    <string name="table">Tavolo</string>

<!--    Landing-->
    <string name="landing_book_title">Conferma</string>
    <string name="landing_book_message">Si desidera confermare la prenotazione?</string>
    <string name="landing_book_edit_message">Si desidera confermare la modifica della prenotazione?</string>
    <string name="landing_book_confirm">Conferma</string>
    <string name="landing_book_not_available_message">Disponibiità esaurita</string>
    <string name="landing_book_success_message">Prenotazione confermata!</string>
    <string name="landing_book_error_message">Si è verificato un problema nella creazione della prenotazione</string>
    <string name="landing_book_edit_success_message">Prenotazione modificata!</string>
    <string name="landing_book_edit_error_message">Si è verificato un problema nella modifica della prenotazione</string>
    <string name="landing_book_dismiss_message">Prenotazione non effettuata!</string>

<!--    Dashboard-->
    <string name="hour_occupation_bar_chart_desc">Prenotazioni per fasce orarie in data odierna</string>
    <string name="room_occupation_bar_chart_desc">Occupazione locali in data odierna</string>

<!--    Notification-->
    <string name="reminder_today_booking_title">Ricorda i tuoi posti!</string>
    <string name="reminder_today_booking_desc">Non dimenticare le prenotazioni di oggi.</string>
    <string name="reminder_click_here_to_view">Clicca qui per visualizzare!</string>
    <string name="report_availability_success_message">Segnalazione creata con successo</string>
    <string name="report_availability_error_message">Segnalazione non creata</string>
</resources>
