<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.dbortoluzzi.tuttiapposto.ui.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="match_parent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:autoSizeTextType="uniform"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:text="@string/registration_welcome_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegisterEmailWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registrationText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        android:layout_margin="20dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/RegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/AppTheme.Text.Inverted"
        android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegisterPasswordWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailWrapper"
        app:layout_constraintStart_toStartOf="@+id/RegisterEmailWrapper"
        app:layout_constraintEnd_toEndOf="@+id/RegisterEmailWrapper"
        android:hint="@string/password"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            style="@style/AppTheme.Text.Inverted"
            android:inputType="textPassword"  />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterLoginBtn"
        android:text="@string/registration" />

    <Button
        style="@style/AppTheme.Button.Inverted"
        android:id="@+id/RegisterLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_login_message"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>