<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_homeFragment">

    <!--In the label field of fragment you can give the name that you want to show in the toolbar-->
    <fragment
        android:id="@+id/nav_homeFragment"
        android:name="it.dbortoluzzi.tuttiapposto.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >

        <action android:id="@+id/action_home_to_no_config"
            app:destination="@id/homeNoConfigFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_homeFragment"/>

        <action android:id="@+id/action_home_to_filter"
            app:destination="@id/filterAvailabilitiesFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_homeFragment">
            <argument
                android:name="requestBooking"
                app:argType="boolean"
                android:defaultValue="false" />
         </action>

        <action android:id="@+id/action_home_to_book_filter"
            app:destination="@id/filterAvailabilitiesFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_homeFragment">
            <argument
                android:name="requestBooking"
                app:argType="boolean"
                android:defaultValue="true" />
        </action>

        <action android:id="@+id/action_home_to_book"
            app:destination="@id/landingBookingFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_homeFragment"/>
    </fragment>

    <fragment
        android:id="@+id/filterAvailabilitiesFragment"
        android:name="it.dbortoluzzi.tuttiapposto.ui.fragments.FilterAvailabilitiesFragment"
        android:label="@string/filter"
        tools:layout="@layout/fragment_filter_availabilities" >

        <action android:id="@+id/action_filter_to_home"
            app:destination="@id/nav_homeFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/filterAvailabilitiesFragment"/>

        <action android:id="@+id/action_filter_to_book"
            app:destination="@id/landingBookingFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/filterAvailabilitiesFragment"/>
    </fragment>

    <fragment
        android:id="@+id/landingBookingFragment"
        android:name="it.dbortoluzzi.tuttiapposto.ui.fragments.LandingBookingFragment"
        android:label="@string/action_book"
        tools:layout="@layout/fragment_landing_booking" >

        <action android:id="@+id/action_book_to_filter"
            app:destination="@id/filterAvailabilitiesFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/landingBookingFragment">
            <argument
                android:name="requestBooking"
                app:argType="boolean"
                android:defaultValue="true" />
        </action>

        <action android:id="@+id/action_book_to_home"
            app:destination="@id/nav_homeFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/landingBookingFragment"/>
    </fragment>

    <fragment
        android:id="@+id/homeNoConfigFragment"
        android:name="it.dbortoluzzi.tuttiapposto.ui.fragments.HomeNoConfigFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_noconfig" >

        <action android:id="@+id/action_no_config_to_hone"
            app:destination="@id/nav_homeFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/homeNoConfigFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_bookingsFragment"
        android:name="it.dbortoluzzi.tuttiapposto.ui.fragments.BookingsFragment"
        android:label="@string/bookings"
        tools:layout="@layout/fragment_bookings">

    <action android:id="@+id/action_bookings_to_edit"
        app:destination="@id/filterAvailabilitiesFragment"
        app:popUpToInclusive="true"
        app:popUpTo="@id/nav_bookingsFragment">
        <argument
            android:name="requestEdit"
            app:argType="boolean"
            android:defaultValue="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_dashboardFragment"
        android:name="it.dbortoluzzi.tuttiapposto.ui.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>